# lumen-lang

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: run_bench.cpp
bench/results/: baseline.json
docs/: ast-shape.md  bytecode-vm.md  closure-design.md  evaluator.md  gc-design.md  grammar.md
examples/: closures.lum  counter.lum  fib.lum  gc_cycle.lum  hello.lum  inheritance.lum  mandelbrot.lum
scripts/: coverage.sh
src/: main.cpp
src/bytecode/: chunk.h  compiler.cpp  compiler.h  gc.cpp  gc.h  opcode.h  vm.cpp  vm.h  vm_value.cpp  vm_value.h
src/eval/: callable.cpp  callable.h  environment.cpp  environment.h  function.cpp  function.h  interpreter.cpp  interpreter.h  runtime_error.h  value.cpp  value.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: ast.h  parser.cpp  parser.h
src/repl/: driver.cpp  driver.h
tests/e2e/: corpus_test.cpp  golden_test.cpp
tests/e2e/corpus/: err_arity.err  err_arity.lum  err_call_number.err  err_call_number.lum  err_divide_string.err  err_divide_string.lum  err_negate_string.err  err_negate_string.lum  err_parse_invalid_assign.err  err_parse_invalid_assign.lum  err_parse_missing_semicolon.err  err_parse_missing_semicolon.lum  err_parse_unclosed_paren.err  err_property_on_number.err  err_property_on_number.lum  err_superclass_not_class.err  err_superclass_not_class.lum  err_type_mismatch.err  err_type_mismatch.lum  err_undefined_property.err  err_undefined_property.lum  err_undefined_var.err  err_undefined_var.lum  ok_arith.lum  ok_arith.out  ok_class_basic.lum  ok_class_method_state.lum  ok_closures_capture_loop.lum  ok_closures_counter.lum  ok_comparisons.lum  ok_comparisons.out  ok_fib_iterative.lum  ok_for.lum  ok_if_else.lum  ok_inherit_field_init.lum  ok_inherit_three.lum  ok_inherit_three.out  ok_inherit_two.lum  ok_inherit_two.out  ok_logic.lum  (+12 more)
tests/e2e/golden/: gc_cycle.out  hello.out  inheritance.out  mandelbrot.out
tests/fuzz/: parser_fuzz.cpp
tests/unit/: bytecode_test.cpp  gc_test.cpp  interpreter_test.cpp  lexer_property_test.cpp  lexer_test.cpp  parser_test.cpp
